--- a/netCoreProject/Views/Default/NavbarPartial.cshtml
+++ b/netCoreProject/Views/Default/NavbarPartial.cshtml
@@ -8,7 +8,7 @@
           <a href="https://twitter.com/mrbbenalppp" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/mrbbenalpp/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="#" class="google-plus"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/alperen-ataseven-a8072722a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
