--- a/netCoreProject/Views/Shared/Components/ServiceList/Default.cshtml
+++ b/netCoreProject/Views/Shared/Components/ServiceList/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@using EntityLayer.Concrete
+﻿﻿@using EntityLayer.Concrete
 @model List<Service>
 <!-- ======= Service Section ======= -->
  <section id="services" class="services">
@@ -11,12 +11,12 @@
  <div class="row">
             @foreach (var item in Model)
             {
-               <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-                    <div class="icon"><i class="@item.ImageUrl"></i></div>
-                <h4 class="title"><a href="">@item.Title</a></h4>
-               </div> 
+                   <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+                        <div class="icon"><i class="@item.ImageUrl"></i></div>
+                    <h4 class="title"><a href="">@item.Title</a></h4>
+                   </div> 
             }
-            
+
     </div>
   </div>
 </section><!-- End Services Section -->
