--- a/netCoreProject/Views/Default/SendMessage.cshtml
+++ b/netCoreProject/Views/Default/SendMessage.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-          <form method="post" role="form" class="php-email-form">
+          <form action="/Default/SendMessage/" method="post" role="form" class="php-email-form">
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="name">Adınız</label>
@@ -9,10 +9,6 @@
                 <label for="name">Mail Adresiniz</label>
                 <input type="email" class="form-control" name="Mail" id="email" required>
               </div>
-            </div>
-            <div class="form-group">
-              <label for="name">Subject</label>
-              <input type="text" class="form-control" name="subject" id="subject" required>
             </div>
             <div class="form-group">
               <label for="name">Mesajınız</label>
