--- a/netCoreProject/Views/Default/Index.cshtml
+++ b/netCoreProject/Views/Default/Index.cshtml
@@ -43,7 +43,7 @@
 
                     @await Component.InvokeAsync("ContactDetails")
 
-                    @await Component.InvokeAsync("SendMessage")
+                    @await Html.PartialAsync("/Views/Default/SendMessage.cshtml")
 
         </div>
 
