--- a/netCoreProject/Views/Skill/Index.cshtml
+++ b/netCoreProject/Views/Skill/Index.cshtml
@@ -1,60 +1,88 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Skill>
+
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Index</h1>
+<!-- Table -->
+      <div class="row">
+        <div class="col">
+          <div class="card shadow">
+            <div class="card-header border-0">
+              <h3 class="mb-0">Yetenek Listesi</h3>
+            </div>
+            <div class="table-responsive">
+              <table class="table align-items-center table-flush">
+                <thead class="thead-light">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Başlık</th>
+                    <th scope="col">Oran</th>
+                    <th scope="col">Sil</th>
+                    <th scope="col">Düzenle</th>
+                    <th scope="col"></th>
+                  </tr>
+                </thead>
+                <tbody>
 
-<table class="table table-bordered">
-    <tr>
-        <th>#</th>
-        <th>Başlık</th>
-        <th>Oran</th>
-        <th>Sil</th>
-        <th>Düzenle</th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>SQL</th>
-        <th>95</th>
-        <th><a href="#" class="btn btn-danger">Sil</a></th>
-        <th><a href="#" class="btn btn-warning">Güncelle</a></th>
-    </tr>
-
-</table>
+                        @foreach (var item in Model)
+                        {
+                                <tr>
+                        
+                            <th>
+                                @item.SkillId
+                            </th>
+                        <td>
+                          @item.Title
+                        </td>
+                        <td>
+                          <div class="d-flex align-items-center">
+                            <span class="mr-2">@item.Value %</span>
+                            <div>
+                              <div class="progress">
+                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="@item.Value" aria-valuemin="0" aria-valuemax="100" style="width: @item.Value%;"></div>
+                              </div>
+                            </div>
+                          </div>
+                        </td>
+                        <td><a href="#" class="btn btn-danger">Sil</a></td>
+                        <td><a href="#" class="btn btn-success">Güncelle</a></td>
+                      </tr>
+                        }
+                </tbody>
+              </table>
+              <br />
+              <a href="#" class="btn btn-primary ">Yeni Yetenek Ekle</a>
+            </div>
+            <div class="card-footer py-4">
+              <nav aria-label="...">
+                <ul class="pagination justify-content-end mb-0">
+                  <li class="page-item disabled">
+                    <a class="page-link" href="#" tabindex="-1">
+                      <i class="fas fa-angle-left"></i>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                  </li>
+                  <li class="page-item active">
+                    <a class="page-link" href="#">1</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item">
+                    <a class="page-link" href="#">
+                      <i class="fas fa-angle-right"></i>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+      
