--- a/netCoreProject/Views/Skill/Index.cshtml
+++ b/netCoreProject/Views/Skill/Index.cshtml
@@ -48,14 +48,14 @@
                             </div>
                           </div>
                         </td>
-                        <td><a href="#" class="btn btn-danger">Sil</a></td>
+                            <td><a href="/Skill/DeleteSkill/@item.SkillId" class="btn btn-danger">Sil</a></td>
                         <td><a href="#" class="btn btn-success">Güncelle</a></td>
                       </tr>
                         }
                 </tbody>
               </table>
               <br />
-              <a href="#" class="btn btn-primary ">Yeni Yetenek Ekle</a>
+              <a href="/Skill/AddSkill" class="btn btn-primary ">Yeni Yetenek Ekle</a>
             </div>
             <div class="card-footer py-4">
               <nav aria-label="...">
