--- a/netCoreProject/Views/Shared/Components/ContactDetails/Default.cshtml
+++ b/netCoreProject/Views/Shared/Components/ContactDetails/Default.cshtml
@@ -1,29 +1,64 @@
 ﻿@using EntityLayer.Concrete
 @model List<Contact>
+<!--
 <div class="col-lg-5 d-flex align-items-stretch">
-          <div class="info">
-        @foreach (var item in Model)
-        {
-            <h4>@item.Title</h4>
-            <hr>
-            <div class="address">
-              <i class="bi bi-geo-alt"></i>
-              <h4>Adres:</h4>
-              <p>@item.Address</p>
-            </div>
+		  <div class="info">
+@foreach (var item in Model)
+{
+				<h4>@item.Title</h4>
+				<hr>
+				<div class="address">
+				  <i class="bi bi-geo-alt"></i>
+				  <h4>Adres:</h4>
+				  <p>@item.Address</p>
+				</div>
 
-            <div class="email">
-              <i class="bi bi-envelope"></i>
-              <h4>Email:</h4>
-              <p>@item.Mail</p>
-            </div>
+				<div class="email">
+				  <i class="bi bi-envelope"></i>
+				  <h4>Email:</h4>
+				  <p>@item.Mail</p>
+				</div>
 
-            <div class="phone">
-              <i class="bi bi-phone"></i>
-              <h4>Telefon:</h4>
-              <p>@item.Phone</p>
-            </div>
-        }
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-          </div>
+				<div class="phone">
+				  <i class="bi bi-phone"></i>
+				  <h4>Telefon:</h4>
+				  <p>@item.Phone</p>
+				</div>
+}
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+		  </div>
+		</div>
+        -->
+
+<div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
+    @foreach (var item in Model)
+    {
+    <div class="mt-3 px-1">
+        <div class="h5">@item.Title</div>
+        <p>@item.Description </p>
+    </div>
+    <div class="mt-53 px-1">
+        <div class="row">
+            
+                <div class="col-sm-2">
+                    <div class="pb-1">E-Mail:</div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="pb-1 fw-bolder">@item.Mail</div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="pb-1">Adres:</div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="pb-1 fw-bolder">@item.Address</div>
+                </div>
+                <div class="col-sm-2">
+                    <div class="pb-1">Telefon:</div>
+                </div>
+                <div class="col-sm-10">
+                    <div class="pb-1 fw-bolder">@item.Phone</div>
+                </div>
         </div>
+	</div>
+	}
+</div>
